// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task Tracking Parsing HTML Service parseOutActivityDetails to work for mock html 1`] = `
Object {
  "activityId": 229268,
  "clientId": 48,
  "clientName": "Auto-Owners Insurance",
  "date": "2017-08-02T04:00:00.000Z",
  "description": "Hardware issue, need to replace laptop<br>Technical QA documentation<br>React performance Prototype",
  "hours": 8,
  "isBillable": true,
  "minutes": 0,
  "projectId": 552,
  "projectName": "UW Modernization",
  "taskId": 4435,
  "taskName": "Implementation",
}
`;

exports[`Task Tracking Parsing HTML Service parseOutActivityIdListGivenDate to work for mock html 1`] = `
Array [
  "229268",
]
`;

exports[`Task Tracking Parsing HTML Service parseOutTasksOfTheMonth to work for mock html 1`] = `
Array [
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-01T04:00:00.000Z",
    "description": "",
    "hours": 8,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-02T04:00:00.000Z",
    "description": "",
    "hours": 8,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-03T04:00:00.000Z",
    "description": "",
    "hours": 8,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-04T04:00:00.000Z",
    "description": "",
    "hours": 4,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
]
`;

exports[`Task Tracking Parsing HTML Service parseOutTasksOfTheWeek to work for mock html 1`] = `
Array [
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-07-31T04:00:00.000Z",
    "description": "",
    "hours": 8,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-01T04:00:00.000Z",
    "description": "",
    "hours": 8,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-02T04:00:00.000Z",
    "description": "",
    "hours": 8,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-03T04:00:00.000Z",
    "description": "",
    "hours": 8,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-04T04:00:00.000Z",
    "description": "",
    "hours": 4,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
]
`;
